--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.nav-link:hover {
+  color: #0d6efd !important;
+  border-bottom: 2px solid #0d6efd;
+  transition: 0.2s ease-in-out;
+}
+
+
+.orange-text {
+  color: orange;
+}
+
+.logodiv{
+  display: flex;
+  flex-direction: column;
+}
+
+
+.carouseldiv {
+  display: flex;
+}
+
+.paraphCarousel {
+  text-align: center;
+  font-family: Roboto;
+
+}
+
+.gris {
+  background-color: #F0F0F2;
+  border-radius: 10%;
+  padding: 2%;
+  color: orange;
+}
+
+.navbar .nav-link.active {
+  color: orange !important;
+  font-weight: bold;
 }
